# GoogleDocsMCPServer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  SECURITY.md  SUPPORT.md  main.py  pyproject.toml  requirements.txt  server.json
.github/workflows/: ci.yml  pages.yml
docs/: DEVELOPMENT.md  GITHUB_PAGES_SETUP.md  PRIVACY_POLICY.md  PUBLISHING.md  SETUP_GUIDE.md  TERMS_OF_SERVICE.md  TOOLS_REFERENCE.md
google_docs_mcp_server/: __init__.py  __main__.py  app.py  auth.py  auth_cli.py  oauth_client.example.json  registry.py  server.py  web.py
google_docs_mcp_server/tools/: __init__.py  advanced_tools.py  common.py  docs_tools.py  extraction_tools.py  formatting_tools.py  insertion_tools.py
tests/: smoke_sse.py  smoke_stdio.py  test_server.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
website/: index.html
website/assets/: app.js  styles.css
website/privacy/: index.html
website/terms/: index.html
