[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-docs-mcp-server"
version = "0.1.0"
description = "Google Docs and Drive MCP server with 50 document, formatting, extraction, and collaboration tools"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ahmed Laminou Amadou", email = "ahmedlaminouamadou@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "mcp>=1.2.0",
    "fastmcp>=0.4.1",
    "google-api-python-client>=2.131.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "itsdangerous>=2.2.0"
]
keywords = ["mcp", "google-docs", "google-drive", "automation", "vscode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/AhmedLaminou/GoogleDocsMCPServer"
Repository = "https://github.com/AhmedLaminou/GoogleDocsMCPServer.git"
Documentation = "https://github.com/AhmedLaminou/GoogleDocsMCPServer/tree/main/docs"
Issues = "https://github.com/AhmedLaminou/GoogleDocsMCPServer/issues"

[project.scripts]
google-docs-mcp-server = "google_docs_mcp_server.server:main"
google-docs-mcp-web = "google_docs_mcp_server.web:main"

[tool.hatch.build.targets.wheel]
packages = ["google_docs_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/google_docs_mcp_server",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/server.json"
]
